# grpc-examples

./: .gitignore  .gitmodules  .gitpod.yml  README.md
grpc_vs_rest/: data.json
grpc_vs_rest/java_client/: pom.xml
grpc_vs_rest/java_grpc/: pom.xml
grpc_vs_rest/java_rest/: README.md  pom.xml
grpc_vs_rest/java_rest_client/: pom.xml
grpc_vs_rest/nodejs/: client.js  client_bench copy.js  client_bench.js  package-lock.json  package.json
grpc_vs_rest/proto/: test.proto
hello/: client.js  package-lock.json  server.js
hello/java/: README.md  pom.xml
hello/nginx/: nginx.conf
hello/nodejs/: README.md  client.js  package-lock.json  package.json  server.js
hello/proto/: hello.proto
hello/rust/: Cargo.toml  README.md
hello/rust/src/: client.rs  server.rs
node/hello-world/: client.js  package-lock.json  package.json
node/simple-chat/: client.js  package-lock.json  package.json  server.js
proto_vs_json/: notes.md  package-lock.json  package.json  serializer.js  user.proto  user_pb.js
proto_vs_json/data/: user-000.json  user-000.pb  user-001.json  user-001.pb  user-002.json  user-002.pb  user-003.json  user-003.pb  user-004.json  user-004.pb  user-005.json  user-005.pb  user-006.json  user-006.pb  user-007.json  user-007.pb  user-008.json  user-008.pb  user-009.json  user-009.pb  user-010.json  user-010.pb  user-011.json  user-011.pb  user-012.json  user-012.pb  user-013.json  user-013.pb  user-014.json  user-014.pb  user-015.json  user-015.pb  user-016.json  user-016.pb  user-017.json  user-017.pb  user-018.json  user-018.pb  user-019.json  user-019.pb  (+1960 more)
(+38 files in other folders)
