[package]
name = "hello"
version = "0.1.0"
authors = ["Artus <artusrocha@gmail.com>"]
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "hello-server"
path = "src/server.rs"

#[[bin]] # Bin to run the HelloWorld gRPC client
#name = "hello-client"
#path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1", features = ["macros"] }

[build-dependencies]
tonic-build = "0.4"